2006-05-23  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/external/classpath/: Resynced with GNU Classpath.

2006-05-23  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/nio/Makefile.am(libjavanio_la_SOURCES):
	Added gnu_java_nio_VMChannel.c.

	* libraries/clib/nio/gnu_java_nio_VMChannel.c: New file, taken
	from GNU Classpath.

 	* libraries/clib/target/generic/target_generic_network.h,
	libraries/javalib/external/classpath/:
	Resynced with GNU Classpath.

2006-05-22  Dalibor Topic  <robilad@kaffe.org>

	* TODO: Updated after the last Classpath merge.

	* libraries/clib/native/Class.c,
	libraries/clib/native/gnu_classpath_VMSystemProperties.c,
	libraries/clib/native/java_lang_VMSystem.c,
	libraries/clib/target/generic/target_generic_network.h:
	Updated for changes in GNU Classpath.

	* libraries/javalib/external/classpath/ : Resynced with GNU Classpath
	from 2006-05-15.

	* libraries/javalib/vmspecific/java/lang/String.java:
	Added missing methods from GNU Classpath.

	* libraries/javalib/vmspecific/gnu/classpath/VMSystemProperties.java,
	libraries/javalib/vmspecific/java/lang/VMClass.java,
	libraries/javalib/vmspecific/java/lang/VMClassLoader.java,
	libraries/javalib/vmspecific/java/lang/VMSystem.java,
	libraries/javalib/vmspecific/java/lang/reflect/Constructor.java,
	libraries/javalib/vmspecific/java/lang/reflect/Field.java,
	libraries/javalib/vmspecific/java/lang/reflect/Method.java:
	Updated to reflect VM interface changes in GNU Classpath.

	* test/regression/ProcessClassInst.java,
	test/regression/ProcessClassStop.java:
	Updated expected output.
	
2006-05-17  Antoine Reilles <tonio@kaffe.org>
	    Joerg Sonnenberger  <joerg@britannica.bec.de>
	* libraries/clib/sound/esd/org_tritonus_lowlevel_esd_EsdRecordingStream.c,
	libraries/clib/sound/esd/org_tritonus_lowlevel_esd_EsdStream.c:
	remove include of org_tritonus_lowlevel_esd_EsdRecordingStream.h as it
	does not exist

2006-05-16  Antoine Reilles <tonio@kaffe.org>