@@ -1,3 +1,14 @@
+2006-05-24  Dalibor Topic  <robilad@kaffe.org>
+
+	Small warning fix for powerpc-darwin.
+
+	* include/jsyscall.h (_sendto) Modified prototype to match
+	OS X & GNU/Linux declaration.
+
+	* kaffe/kaffevm/systems/unix-jthreads/syscalls.c,
+	kaffe/kaffevm/systems/unix-pthreads/syscalls.c 
+	(jthreadedSendto): Updated declaration to match libc.
+	
 2006-05-23  Dalibor Topic  <robilad@kaffe.org>
 
 	* libraries/javalib/external/classpath/: Resynced with GNU Classpath.
